fix resume button

--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
                             <div class="big">Rifat's Portfolio</div>
                             <div class="small">Proficient communicator and solution driven Computer Science student
                             </div>
-                            <a href="file:///C:/Users/rifat/Desktop/Important/RifatResume2021.pdf" target="_blank"
-                                class="btn btn-white">VIEW MY RESUME &nbsp<strong><span> &#8594;</span></strong></a>
+                            <!-- file:///C:/Users/rifat/Desktop/Important/RifatResume2021.pdf -->
+                            <a href="file:///C:/Users/rifat/AppData/Local/Temp/Temp1_resume.zip/resume.html"
+                                target="_blank" class="btn btn-white">VIEW MY RESUME &nbsp<strong><span>
+                                        &#8594;</span></strong></a>
                         </div>
                     </div>
                     <img src="images/slider/pexels-photo-219998.jpeg" alt="">
