--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                             <div class="small">Proficient communicator and solution driven Computer Science student
                             </div>
                             <!-- file:///C:/Users/rifat/Desktop/Important/RifatResume2021.pdf -->
-                            <a href="file:///C:/Users/rifat/AppData/Local/Temp/Temp1_resume.zip/resume.html"
-                                target="_blank" class="btn btn-white">VIEW MY RESUME &nbsp<strong><span>
+                            <a href="RifatResume2021.pdf" target="_blank" class="btn btn-white">VIEW MY RESUME
+                                &nbsp<strong><span>
                                         &#8594;</span></strong></a>
                         </div>
                     </div>
