--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </button>
                     <!--Start Logo -->
                     <div class="logo-nav">
-                        <a href="index.html">
+                        <a href="404.html">
                             <img id="resize" src="images/logo.png" alt="Company logo" />
                         </a>
                     </div>
