--- a/index.html
+++ b/index.html
@@ -540,22 +540,22 @@
                     <p>foilwarp@gmail.com</p>
                 </div>
 
-                <form method="post">
+                <form method="post" action="contactForm.php">
                     <div class="row">
                         <div class="col-md-4">
-                            <input class="form-control" id="name" placeholder="Full Name" type="text">
+                            <input name="name" class="form-control" id="name" placeholder="Full Name" type="text">
                         </div>
                         <div class="col-md-4">
-                            <input class="form-control" id="email" placeholder="Your Email" type="email">
+                            <input name="mail" class="form-control" id="email" placeholder="Your Email" type="email">
                         </div>
                         <div class="col-md-4">
-                            <input class="form-control" id="subject" placeholder="Subject" type="text">
+                            <input name="subject" class="form-control" id="subject" placeholder="Subject" type="text">
                         </div>
                         <div class="col-md-12">
-                            <textarea class="form-control" id="message" rows="7" placeholder="Your Message"></textarea>
+                            <textarea name="message" class="form-control" id="message" rows="7" placeholder="Your Message"></textarea>
                         </div>
                         <div class="col-md-12 text-right">
-                            <button type="submit" class="btn btn-green">SEND MESSAGE</button>
+                            <button name="submit" type="submit" class="btn btn-green">SEND MESSAGE</button>
                         </div>
                     </div>
                 </form>
