--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                     <p>foilwarp@gmail.com</p>
                 </div>
 
-                <form method="post" action="contactForm.php">
+                <form method="post" action="https://formspree.io/f/mleappbg">
                     <div class="row">
                         <div class="col-md-4">
                             <input name="name" class="form-control" id="name" placeholder="Full Name" type="text">
