--- a/index.html
+++ b/index.html
@@ -546,13 +546,15 @@
                             <input name="name" class="form-control" id="name" placeholder="Full Name" type="text">
                         </div>
                         <div class="col-md-4">
-                            <input name="mail" class="form-control" id="email" placeholder="Your Email" type="email">
+                            <input name="_replyto" class="form-control" id="email" placeholder="Your Email"
+                                type="email">
                         </div>
                         <div class="col-md-4">
                             <input name="subject" class="form-control" id="subject" placeholder="Subject" type="text">
                         </div>
                         <div class="col-md-12">
-                            <textarea name="message" class="form-control" id="message" rows="7" placeholder="Your Message"></textarea>
+                            <textarea name="message" class="form-control" id="message" rows="7"
+                                placeholder="Your Message"></textarea>
                         </div>
                         <div class="col-md-12 text-right">
                             <button name="submit" type="submit" class="btn btn-green">SEND MESSAGE</button>
