--- a/index.html
+++ b/index.html
@@ -588,7 +588,9 @@
                         <ul>
                             <li><a href="https://github.com/HasanRifat" target="_blank"><i class="fa fa-github"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                            <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><i
+                                        class="fa fa-youtube-play"></i></a>
+                            </li>
                             <li><a href="https://www.instagram.com/foogazy__/" target="_blank"><i
                                         class="fa fa-instagram"></i></a></li>
                         </ul>
@@ -600,7 +602,7 @@
     </footer>
     <!--End Footer-->
 
-    <a href="#" class="scrollup"> <i class="fa fa-chevron-up"> </i> </a>
+    <a href="#home" class="scrollup"> <i class="fa fa-chevron-up"> </i> </a>
 
     <!--Plugins-->
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
