--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
                             <a href="RifatResume2021.pdf" target="_blank" class="btn btn-white">VIEW MY RESUME
                                 &nbsp<strong><span>
                                         &#8594;</span></strong></a>
+                            <a href="wufph_demo.mp4" target="_blank" class="btn btn-white">View a Random Project&nbsp<strong><span>
+                                &#8594;</span></strong></a> 
                         </div>
                     </div>
                     <img src="images/slider/pexels-photo-219998.jpeg" alt="">
